[package]
name = "contract-admin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.14.0"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "0.14.0"
contract-msgs = {version = "0.1.0", features = ["library"], path = "../contract-msgs"}
contract-vote = {version = "0.1.0", features = ["library"], path = "../contract-vote"}

[dev-dependencies]
cw-multi-test = "0.14.0"
cosmwasm-schema = { version = "1.0.0" }
