[package]
name = "contract-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.14.0"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "0.14.0"
derive-getters = "0.2"
msgs = {version = "0.1.0", features = ["library"], path = "../msgs"}
contract-vote = {version = "0.1.0", features = ["library"], path = "../contract-vote"}
contract-admin = {version = "0.1.0", features = ["library"], path = "../contract-admin"}

[dev-dependencies]
cw-multi-test = "0.14.0"
cosmwasm-schema = { version = "1.0.0" }
